--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,16 +1,16 @@
 {
   "name": "Node.js",
   "dockerComposeFile": "docker-compose.yml",
-  "service": "app",
+  "service": "devcontainer",
   "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
   "waitFor": "onCreateCommand",
   "updateContentCommand": "npm install",
-  "onCreateCommand": "sh .devcontainer/on-create.sh",
-  "postCreateCommand": "",
-  "postAttachCommand": {
-    "server": "npm run dev"
-  },
-  "forwardPorts": [3000, 8080],
+  "onCreateCommand": "",
+  "postCreateCommand": "npm install",
+  "postAttachCommand": "",
+  "forwardPorts": [
+    3000,8080
+  ],
   "portsAttributes": {
     "3000": {
       "label": "Application",
