--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "API",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.3",
+    "redis": "^4.6.12"
   }
 }
